# lab-flask-bdd

./: .cfignore  .dockerignore  .flaskenv  .gitignore  .travis.yml  Dockerfile  Jenkinsfile  LICENSE  Makefile  Pipfile  Procfile  README.md  Vagrantfile  _travis.yml  config.py  docker-compose.yml  dot-env-example  k3d-config.yaml  manifest.yml  pet.py  pyproject.toml  requirements.txt  run.py  server.py  setup.cfg  skaffold.env  skaffold.yaml  test_pets.py  test_selenium.py  test_server.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: install-tools.sh  setup-lab.sh
.github/workflows/: bdd-tests.yml  tdd-tests.yml
.ssh/: config
app/: __init__.py  custom_exceptions.py  error_handlers.py  models.py  server.py
app/static/: index.html  rest_api.js
app/static/js/: rest_api.js
config/: insecure-registry.json
deploy/: deployment.yaml  postgresql.yaml  service.yaml
features/: environment.py  pets.feature
features/steps/: pet_steps.py  pets_steps.py  web_steps.py
k8s/: deployment.yaml  ingress.yaml  postgresql.yaml  pv.yaml  service.yaml
k8s/postgres/: pv.yaml  secret.yaml  service.yaml  statefulset.yaml
service/: __init__.py  config.py  error_handlers.py  models.py  routes.py  service.py
service/common/: cli_commands.py  log_handlers.py  status.py
service/static/: index.html
service/static/js/: rest_api.js
service/utils/: __init__.py  error_handlers.py  log_handlers.py  status.py
static/: index.html
tests/: factories.py  test_cli_commands.py  test_models.py  test_pets.py  test_routes.py  test_selenium.py  test_server.py  test_service.py  test_service_routes.py
